--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ h1 {
 
 p {
   margin: 0;
-  font-size: 21px;
+  font-size: 23px;
+  font-weight: 400;
   line-height: 1.2em;
 }
 /*-------------------------Header-------------------------*/
@@ -81,7 +82,7 @@ p {
 }
 /*-------------------------Navigation link images-------------------------*/
 .nav-bttn-home {
-  background-image: url(/simple-js-app/img/greenbttn.png);
+  background-image: url(../img/greenbttn.png);
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
@@ -89,7 +90,7 @@ p {
 }
 
 .nav-bttn-home:hover {
-  background-image: url(/simple-js-app/img/greenbttn-hover.png);
+  background-image: url(../img/greenbttn-hover.png);
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
@@ -97,7 +98,7 @@ p {
 }
 
 .nav-bttn-about {
-  background-image: url(/simple-js-app/img/aboutbttn.png);
+  background-image: url(../img/aboutbttn.png);
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
@@ -105,7 +106,7 @@ p {
 }
 
 .nav-bttn-about:hover {
-  background-image: url(/simple-js-app/img/aboutbttn-hover.png);
+  background-image: url(../img/aboutbttn-hover.png);
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
@@ -116,37 +117,42 @@ p {
 
 .pokedex-window {
   position: relative;
-  overflow: auto;
-  text-align: left;
   max-width: 800px;
   width: 100%;
   min-width: 300px;
   height: 500px;
   background-color: #ececec;
   margin: 50px auto;
-  padding: 25px 25px 0px 25px;
+  padding: 15px 15px 15px;
   border-radius: 5%;
   border: 3px solid black;
-  transition: ease all .7s;
+  transition: all ease-in-out 0.4s;
 }
 
-.pokemon-grid__item { /* Grid fallback*/
-  display: inline-block;
-  font-size: 1.4em;
-  font-weight: 600;
+.pokedex-window-scrollbox {
+  overflow: auto;
+  max-width: 800px;
+  width: 100%;
+  min-width: 300px;
+  height: 100%;
+  margin: 0;
+  background-color: #ececec;
+  padding: 0 15px 0px 15px;
 }
 
-/*If the grid display is supported, the following declarations will be used */
-@supports (display: grid){ 
-  .pokemon-grid { /* Content from js databse will be inserted into this grid */
-    display: grid;
-    grid-template-rows: 1fr;
-  }
+.pokedex-window-scrollbox::-webkit-scrollbar{
+  width: 11px;
+}
+ 
+.pokedex-window-scrollbox::-webkit-scrollbar-track {
+ background-color: #ececec;
+}
+ 
+.pokedex-window-scrollbox::-webkit-scrollbar-thumb {
+  background-color: #818181;
+  border-radius: 5px;
+}
 
-  .pokemon-grid__item {
-    font-size: 1.4em;
-    font-weight: 600;
-  }
 }
 
 /*-------------------------About Page-------------------------*/
@@ -158,7 +164,7 @@ p {
   max-height: 85vh;
   margin: 0 auto;
   border-radius: 5%;
-  padding: 10px;
+  padding: 15px;
   background-color: rgb(219, 219, 219);
 }
 
@@ -184,18 +190,12 @@ p {
 /*-------------------------Mobile Support-------------------------*/
 
 @media all and (max-width:720px) {
-  .pokemon-grid__item {
-    font-size: 1.2em;
-    font-weight: 600;
-  }
-
   .pokedex-window {
     min-height: 200px;
     height: 80vh;
     margin: 0.5em auto 0;
-    padding: 20px 20px 0 20px;
+    padding: 15px;
   }
-
   
   .nav-bttn-home {
     width: 120px;
@@ -225,7 +225,7 @@ p {
     min-height: 200px;
     height: 80vh;
     margin: 0.5em auto 0;
-    padding: 10px 10px 0 10px;
+    padding: 10px;
   }
   
   .page-header { /* endless background for the header */
