--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,17 +1,24 @@
-:root{
-  --p-redcolour: #E61D23;
-  --s-redcolour: #8d0005;
-  --bg-color: #ececec;
-}
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 2 version
+*/
 
 * {/*  Varies values to fit within given size */
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-  background-color: var(--p-redcolour);
+  background-color: #E61D23;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
 }
 
@@ -48,20 +55,29 @@ ul {
   width: 100%;
   min-width: 310px;
   height: 120px;
-  background-color: var(--s-redcolour);
+  background-color: #8d0005;
   border-bottom: 3px solid black;
+  -webkit-transition: ease all .4s;
   transition: ease all .4s;
 }
 
 .page-header-box{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: auto;
   width: 100%;
   min-width: 310px;
   max-width: 800px;
   height: 120px;
+  -webkit-transition: ease all .4s;
   transition: ease all .4s;
 }
 
@@ -72,6 +88,7 @@ ul {
   height: 100px;
   min-width: 100px;
   min-height: 100px;
+  -webkit-transition: ease-in-out all .3s;
   transition: ease-in-out all .3s;
 }
 
@@ -82,6 +99,7 @@ ul {
   height: 100px;
   min-width: 100px;
   min-height: 100px;
+  -webkit-transition: ease-in-out all .2s;
   transition: ease-in-out all .2s;
 }
 
@@ -103,6 +121,7 @@ ul {
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
+  -webkit-transition: ease-in-out all .2s;
   transition: ease-in-out all .2s;
 }
 
@@ -111,6 +130,7 @@ ul {
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
+  -webkit-transition: ease-in-out all .2s;
   transition: ease-in-out all .2s;
 }
 
@@ -119,6 +139,7 @@ ul {
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
+  -webkit-transition: ease-in-out all .2s;
   transition: ease-in-out all .2s;
 }
 
@@ -127,6 +148,7 @@ ul {
   background-size: 100% 100%;
   width: 132px;
   height: 41px;
+  -webkit-transition: ease-in-out all .2s;
   transition: ease-in-out all .2s;
 }
 
@@ -139,7 +161,8 @@ ul {
   right: 35px;
   border: 2px solid rgb(83, 83, 83);
   border-radius: 5px;
-  box-shadow: 2px 2px 5px #818181;
+  -webkit-box-shadow: 2px 2px 5px #818181;
+          box-shadow: 2px 2px 5px #818181;
   font-size: 1.5em;
   cursor: pointer;
 }
@@ -150,9 +173,10 @@ ul {
   top: 35px;
   right: 35px;
   border: 2px solid rgb(0, 0, 0);
-  background-color: var(--p-redcolour);
+  background-color: #E61D23;
   border-radius: 5px;
-  box-shadow: 2px 2px 5px #818181;
+  -webkit-box-shadow: 2px 2px 5px #818181;
+          box-shadow: 2px 2px 5px #818181;
   font-size: 1.5em;
   cursor: pointer;
 }
@@ -163,20 +187,29 @@ ul {
 .modal-foreground.visible{
   overflow: auto;
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   max-width: 800px;
   width: 100%;
   min-width: 300px;
   height: 100%;
-  background-color: var(--bg-color);
+  background-color: #ececec;
   padding: 40px;
   border-radius: 5%;
   margin: 0;
   top:0;
   left: 0;
-  justify-content:center;
-  align-items: center;
+  -webkit-box-pack:center;
+      -ms-flex-pack:center;
+          justify-content:center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .pokemon-img{  
@@ -192,11 +225,12 @@ ul {
   width: 100%;
   min-width: 300px;
   height: 500px;
-  background-color: var(--bg-color);
+  background-color: #ececec;
   margin: 50px auto;
   padding: 15px 15px 15px;
   border-radius: 5%;
   border: 3px solid black;
+  -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
 
@@ -207,13 +241,15 @@ ul {
   min-width: 300px;
   height: 100%;
   margin: 0;
-  background-color: var(--bg-color);
+  background-color: #ececec;
   padding: 0 15px 0px 15px;
 }
 
 /*--styles the loading screen--*/
 .msg-board {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 24px;
   font-weight: 900;
@@ -222,9 +258,13 @@ ul {
   min-width: 260px;
   height: 97%;
   margin: 0;
-  background-color: var(--bg-color);
-  align-items: center;
-  justify-content: center;
+  background-color: #ececec;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .pokedex-window-scrollbox::-webkit-scrollbar{
@@ -232,7 +272,7 @@ ul {
 }
  
 .pokedex-window-scrollbox::-webkit-scrollbar-track {
- background-color: var(--bg-color);
+ background-color: #ececec;
 }
  
 .pokedex-window-scrollbox::-webkit-scrollbar-thumb {
@@ -256,6 +296,7 @@ ul {
   border: 3px solid rgb(147, 147, 255);
   width: 100%;
   margin: 5px 0;
+  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
 }
 
@@ -271,6 +312,7 @@ ul {
 /*--removes the black outline box from the created buttons--*/
 .pokemon-list-style:focus {
   outline: none;
+  -webkit-transition: none;
   transition: none;
 }
 
@@ -301,11 +343,13 @@ ul {
   width: 50px;
   height: auto;
   margin: 5px;
+  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
 .logos:hover {
-  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 /*-------------------------Mobile Support-------------------------*/
