--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,23 @@
-* {/*  Varies values to fit within given size */
+* {
   box-sizing: border-box;
+  font-size: 102%;
 }
 
 html{
   height: 100vh;
+}
+
+h1{
+  font-size: 1.6em;
+}
+
+h1{
+  font-size: 1.5em;
+}
+
+.col > p {
+  font-size: 1.1em;
+  padding: 0px 35px;
 }
 
 .modal-body > p {
@@ -18,8 +32,13 @@ html{
   width: 15rem;
 }
 
+.underline:hover{
+  text-decoration: 1px underline white;
+  transition: all ease-in-out 0.2s;
+}
+
 footer .row div {
-  background-color: #343A40;
+  background-color: #DC3545;
   border-top: 2px solid green;
   height: 60px;
 }
@@ -28,13 +47,11 @@ footer .row div {
   width: 40px;
   height: auto;
   margin: 10px 6px;
-  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
 .logos:hover {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 .display-img{
@@ -56,9 +73,20 @@ footer .row div {
   z-index: 9;
 }
 
+@media all and (max-width: 990px){
+
+  .col > p {
+    padding: 0px 0px;
+  }
+}
+
 @media all and (max-width: 400px){
 
   h1{
-    font-size: 22pt;
+    font-size: 1.4em;
+  }
+
+  h2{
+    font-size: 1.3em;
   }
 }
