--- a/css/styles.css
+++ b/css/styles.css
@@ -29,14 +29,24 @@ h1{
 }
 
 .underline:hover{
-  text-decoration: 1px underline white;
-  transition: all ease-in-out 0.2s;
+  text-decoration: 2px underline white;
+  transition: all ease-in-out 0.5s;
+}
+
+.ball-size {
+  width: 55px;
+  height: auto;
+}
+
+.nav-link{
+  font-size: 1.2em;
+  font-weight: 700;
 }
 
 .logos {
-  width: 40px;
+  width: 55px;
   height: auto;
-  margin: 10px 6px;
+  margin: 10px 10px;
   transition: all 0.3s ease-in-out;
 }
 
